# taggit

./: .gitignore  Cargo.toml  README.md  TODO.md  design.odt  taggit.rs
example/: README.md
example/.taggit/: config.yaml  structs
info/: demo.txt  design.txt  documentation.md  documentation.odt  options.txt  struct.txt  tree.txt
src/: add.rs  cli.yaml  cli.yaml.bkp  common.rs  init.rs  list.rs  main.rs  tag.rs  taggit.rs
